comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda nostrum, quo quidem deleniti rerum a quam eaque ullam, soluta aut dicta amet est quos dolorum accusantium libero, minus quaerat vero.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quibusdam nostrum maiores quis reiciendis, repellendus natus vero provident asperiores, nisi nobis magni corporis voluptatum assumenda animi quo necessitatibus doloribus ad!</p>
         </article>
     </main>
 </body>
