--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda nostrum, quo quidem deleniti rerum a quam eaque ullam, soluta aut dicta amet est quos dolorum accusantium libero, minus quaerat vero.</p>
+            <p><a href="curso-html.html">Acesso o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus quibusdam nostrum maiores quis reiciendis, repellendus natus vero provident asperiores, nisi nobis magni corporis voluptatum assumenda animi quo necessitatibus doloribus ad!</p>
+            <p><a href="curso-js.html">Acesso o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
